i swear im done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Projects</h2>
-								<p>*all code and other projects available <a href="https://github.com/ovifrisch">here</a></p>
+								<p>*all code and other projects available <b><a href="https://github.com/ovifrisch">here</a></b></p>
 								<div class="project">
 									<div class="project_headers">
 										<h3><a href="http://mapchat1.herokuapp.com/" target="_blank">Map Chat</a></h3>
